--- a/utm_to_lonlat.ipynb
+++ b/utm_to_lonlat.ipynb
@@ -20,44 +20,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "to_latlon() takes from 3 to 6 positional arguments but 9 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m utm\u001b[39m.\u001b[39;49mto_latlon(np\u001b[39m.\u001b[39;49marray([\u001b[39m414894\u001b[39;49m, \u001b[39m5192567\u001b[39;49m]), np\u001b[39m.\u001b[39;49marray([\u001b[39m415336\u001b[39;49m, \u001b[39m5190076\u001b[39;49m]),np\u001b[39m.\u001b[39;49marray([\u001b[39m416300\u001b[39;49m,\u001b[39m5182873\u001b[39;49m]),np\u001b[39m.\u001b[39;49marray([\u001b[39m416800\u001b[39;49m,\u001b[39m5182873\u001b[39;49m]),np\u001b[39m.\u001b[39;49marray([\u001b[39m417111\u001b[39;49m,\u001b[39m5180063\u001b[39;49m]),np\u001b[39m.\u001b[39;49marray([\u001b[39m417104\u001b[39;49m,\u001b[39m5177463\u001b[39;49m]),np\u001b[39m.\u001b[39;49marray([\u001b[39m417549\u001b[39;49m,\u001b[39m5176548\u001b[39;49m]), \u001b[39m10\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mT\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: to_latlon() takes from 3 to 6 positional arguments but 9 were given"
-     ]
-    }
-   ],
-   "source": [
-    "utm.to_latlon(np.array([414894, 5192567]), np.array([415336, 5190076]),np.array([416300,5182873]),np.array([416800,5182873]),np.array([417111,5180063]),np.array([417104,5177463]),np.array([417549,5176548]), 10, 'T')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "list_of_utm=[(414894, 5192567),(415336, 5190076),(416300,5182873),(416800,5182873),(417111,5180063),(417104,5177463),(417549,5176548)]"
+    "list_of_utm=[(414894, 5192567),(415336, 5190076),(416300,5186122),(416800,5182873),(417111,5180063),(417104,5177463),(417549,5176548)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(46.88119099155512, -124.1169700301408), (46.85883522906347, -124.11070764015277), (46.794149068859376, -124.09674423608924), (46.794211657212344, -124.0901938134098), (46.76896745011886, -124.08561105877308), (46.74557300248521, -124.08523290585136), (46.737395315377945, -124.07924393407284)]\n"
+      "[(46.88119099155512, -124.1169700301408), (46.85883522906347, -124.11070764015277), (46.82338166697302, -124.09733865253898), (46.794211657212344, -124.0901938134098), (46.76896745011886, -124.08561105877308), (46.74557300248521, -124.08523290585136), (46.737395315377945, -124.07924393407284)]\n"
      ]
     }
    ],
@@ -70,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -88,14 +67,14 @@
       "text/plain": [
        "[[46.88119099155512, -124.1169700301408],\n",
        " [46.85883522906347, -124.11070764015277],\n",
-       " [46.794149068859376, -124.09674423608924],\n",
+       " [46.82338166697302, -124.09733865253898],\n",
        " [46.794211657212344, -124.0901938134098],\n",
        " [46.76896745011886, -124.08561105877308],\n",
        " [46.74557300248521, -124.08523290585136],\n",
        " [46.737395315377945, -124.07924393407284]]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,19 +85,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# swap the order of the lat and lon\n",
     "list_of_latlon_swapped=[]\n",
     "for point in list_of_latlon:\n",
-    "    list_of_latlon_swapped.append((point[1],point[0]))"
+    "    list_of_latlon_swapped.append([point[1],point[0]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_of_latlon_swapped=[list_of_latlon_swapped]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[[-124.1169700301408, 46.88119099155512],\n",
+       "  [-124.11070764015277, 46.85883522906347],\n",
+       "  [-124.09733865253898, 46.82338166697302],\n",
+       "  [-124.0901938134098, 46.794211657212344],\n",
+       "  [-124.08561105877308, 46.76896745011886],\n",
+       "  [-124.08523290585136, 46.74557300248521],\n",
+       "  [-124.07924393407284, 46.737395315377945]]]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_of_latlon_swapped"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
